src/Components/Insight/GooglePieChart/style.css
svg {
  border-radius: 100px;
}

text {
  font-weight: 700;
  word-break: break-all;
}

.pie {
  position: relative;
  z-index: 99;
}

.pie .logoInside {
  position: absolute;
  padding: 6px 10px;
}

.pie .insight-text {
  position: absolute;
  font-size: 0.9rem;
  padding: 6px 10px;
  font-weight: 500;
}
.pie .button {
  position: absolute;
  font-size: 0.6rem;
  padding: 6px 10px;
  border-radius: 2rem !important;
  border: 1px double black !important;
  color: black !important;
}

.pie .insight-text-6 {
  top: 15%;
  left: 32%;
}

.pie .insight-text-5 {
  top: 38%;
  left: 15%;
}

.pie .insight-text-4 {
  top: 59%;
  left: 17%;
}

.pie .insight-text-3 {
  top: 78%;
  left: 42%;
}

.pie .insight-text-2 {
  top: 63%;
  left: 63%;
}

.pie .insight-text-1 {
  top: 38%;
  left: 66%;
}

.pie .insight-text-0 {
  top: 15%;
  left: 56%;
  background-position: top 15% left 56%;
  background-position-x: 15%;
  background-position-y: 56%;
}

/* 320px — 480px: Mobile devices
481px — 768px: iPads, Tablets
769px — 1024px: Small screens, laptops
1025px — 1200px: Desktops, large screens
1201px and more —  Extra large screens, TV */
@media screen and (max-width: 480px) {
  .pie,
  .pie-chart-height {
    height: 500px !important;
  }

  svg {
    border-radius: 20px;
  }

  text {
    font-size: 0.5rem;
    font-weight: 700;
  }

  .logoInside {
    min-width: 17% !important;
    max-width: 26% !important;
    top: 45% !important;
    left: 40% !important;
  }
  .pie .insight-text {
    position: absolute;
    font-size: 0.6rem;
    padding: 6px 10px;
    font-weight: 400;
    width: 28%;
  }
  .pie .button {
    position: absolute;
    font-size: 0.45rem;
    border-radius: 2rem !important;
    width: 20% !important;
    padding: 1px 1px;
    height: 1.2rem !important;
  }

  .pie .insight-text-6 {
    left: 26%;
  }

  .pie .button-6 {
    top: 28%;
    left: 31%;
  }

  .pie .insight-text-5 {
    top: 36%;
    left: 11%;
    min-width: 18%;
    max-width: 26%;
    word-break: break-word;
  }

  .pie .button-5 {
    top: 48%;
    left: 10%;
  }

  .pie .insight-text-4 {
    top: 58%;
    left: 12%;
    min-width: 18%;
    max-width: 21%;
    text-align: center;
  }
  .pie .button-4 {
    top: 67%;
    left: 17%;
  }

  .pie .insight-text-3 {
    top: 70%;
    left: 39.5%;
    word-break: break-word;
    width: 26%;
  }
  .pie .button-3 {
    top: 72%;
    left: 41%;
  }

  .pie .insight-text-2 {
    top: 57.5%;
    left: 64%;
  }
  .pie .button-2 {
    top: 69%;
    left: 68%;
  }

  .pie .insight-text-1 {
    top: 35%;
    left: 71%;
  }
  .pie .button-1 {
    top: 48%;
    left: 72%;
  }

  .pie .insight-text-0 {
    top: 14%;
    left: 54%;
  }
  .pie .button-0 {
    top: 28%;
    left: 55%;
  }
  .pieDetail .pieInfo .pieInfoList {
    font-size: 0.9rem;
  }

  .pieDetail .pieButton {
    margin: 7% auto 6%;
  }
}

@media screen and (min-width: 480px) and (max-width: 760px) {
  .pie-chart-height {
    height: 500px !important;
  }
  .logoInside {
    min-width: 16% !important;
    max-width: 18% !important;
    top: 47% !important;
    left: 43% !important;
  }
  .pie .insight-text {
    position: absolute;
    font-size: 0.8rem;
    padding: 6px 10px;
    font-weight: 500;
  }
  .pie .button {
    position: absolute;
    font-size: 0.6rem;
    padding: 6px 10px;
    border-radius: 2rem !important;
  }

  .pie .insight-text-6 {
    top: 18%;
    left: 28%;
  }

  .pie .button-6 {
    top: 26%;
    left: 28%;
  }

  .pie .insight-text-5 {
    top: 34%;
    left: 13%;
    min-width: 15%;
    max-width: 18%;
  }

  .pie .button-5 {
    top: 47%;
    left: 12%;
  }

  .pie .insight-text-4 {
    top: 63%;
    left: 17%;
    min-width: 18%;
    max-width: 21%;
    text-align: center;
  }
  .pie .button-4 {
    top: 74% !important;
    left: 20% !important;
    min-width: 16%;
    max-width: 18%;
  }

  .pie .insight-text-3 {
    top: 78%;
    left: 41%;
  }
  .pie .button-3 {
    top: 85%;
    left: 44%;
  }

  .pie .insight-text-2 {
    top: 65%;
    left: 63%;
  }
  .pie .button-2 {
    top: 73%;
    left: 66%;
  }

  .pie .insight-text-1 {
    top: 40%;
    left: 70%;
  }
  .pie .button-1 {
    top: 47%;
    left: 72%;
  }

  .pie .insight-text-0 {
    top: 18%;
    left: 56%;
  }
  .pie .button-0 {
    top: 26%;
    left: 56%;
  }
}
/* ... */

